# elevire

./: .gitignore  README.md  dev.sh
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/apis/v1/chat/: chat_controller.rs  chat_model.rs  chat_service.rs  mod.rs
backend/src/utils/: env.rs  fallback.rs  mod.rs
backend/tests/: quick_dev.rs  test_chat_endpoint.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: app.rs  main.rs
frontend/src/components/: mod.rs
frontend/src/components/chat/: chat_component.rs  mod.rs  model.rs
frontend/src/components/footer/: footer_component.rs  mod.rs
frontend/src/components/header/: header_component.rs
frontend/src/components/thread/: mod.rs  thread_component.rs
