[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Hanifan Rizki Nurahman <hanifanrizki@gmail.com>"]
description = "elevire"
homepage = "https://elevire.com"
repository = "https://github.com/hanifanrn/elevire"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
# Serde / json
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
# Axum
axum = "0.8.3"
tower-http = { version = "0.6.2", features = ["cors"] }
tower-cookies = "0.11"
tower = "0.5.2"
# Others
http = "1.3.1"
lazy-regex = "3.4.1"
async-trait = "0.1.88"
strum_macros = "0.27.1"
uuid = { version = "1.16.0", features = ["v4","fast-rng"] }
reqwest = { version = "0.12.15", features = ["json"] }
dotenv = "0.15.0"


[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
