[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.7.8", features = ["csr"] }
leptos_router = "0.7.8"
log = "0.4.27"
reqwasm = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"
